--- a/templates/book.html
+++ b/templates/book.html
@@ -10,7 +10,7 @@
 <form action="">
     <div class="modal-header">
       <h5 class="modal-title d-flex align-items-center">
-        <i class="bi bi-person-lines-fill fs-3 me-2"></i>User Registration
+        <i class="bi bi-person-lines-fill fs-3 me-2"></i>Book Your Service
       </h5>
     </div>
     <div class="modal-body">
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="text-center my-1">
-        <button type="submit" class="btn btn-dark shadow-none">Register</button>
+        <button type="submit" class="btn btn-dark shadow-none">Book Now</button>
       </div>
     </div>
   </form>
